# json2pyi

./: .gitignore  Cargo.toml  README.md
.cloudflare/: setup-env-for-pages.sh
.github/workflows/: main.yml  rust.yml
pkg/: README.md  json2pyi.d.ts  json2pyi.js  json2pyi_bg.js  json2pyi_bg.wasm  json2pyi_bg.wasm.d.ts  package.json
src/: arena.rs  inferer.rs  inferrer.rs  lib.rs  main.rs  mapset_impl.rs  schema.rs  tests.rs  utils.rs  wasm.rs
src/generation/: dataclasses.rs  mod.rs  python.rs  python_class.rs  python_dataclasses.rs  python_inline.rs
src/inferrer/: adhoc.rs  inferrer.rs  mod.rs  optimizer.rs  tests.rs  unioner.rs
src/langs/: dataclasses.rs  mod.rs
src/schema/: arena.rs  map.rs  mod.rs  name_hints.rs  union.rs
tests/data/: cross-reference.json  empty-array.json  githubstatus.json  issue8-2.json  issue8.json  jvilk-maketypes.json  linked-list.json  quicktype-simple.json  quicktype.json  same-union.json  temp.json  tree-recursion.json  union-of-array-with-any.json  union-of-array.json  union-of-map-and-others.json  union-of-map-with-optional-field.json  union-with-any.json
web/: config-overrides.js  package.json
web-app/: config-overrides.js  package.json
web-app/src/: App.tsx
web/public/: index.html  manifest.json
web/src/: App.tsx
