[package]
authors = ["Hung-I Wang <whygowe@gmail.com>"]
edition = "2018"
name = "json2pyi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11"
indexmap = "1.6"
serde = "1.0"
serde_json = {version = "1.0", features = ["preserve_order"]}
itertools = "0.9"
