# Note: The project is only intended to work as a web app for now.
#       The crate itself has no stable API and no plan to release so far.
[package]
authors = ["Hung-I Wang <whygowe@gmail.com>"]
edition = "2018"
name = "json2pyi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
Inflector = "0.11"
bidirectional-map = "0.1"
disjoint-sets = "0.4"
generational-arena = "0.2"
indexmap = "1.6"
iso8601 = "0.5"
itertools = "0.10"
serde = "1.0"
serde_json = {version = "1.0", features = ["preserve_order"]}
typetag = "0.2"
uuid = "1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1", default-features = true, optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = {version = "0.4", default-features = true, optional = true}
